[package]
name = "drillbit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
blake3 = "1.8.2"
env_logger = "0.11.8"
fs-err = { version = "3.1.1", features = ["tokio"] }
log = "0.4.27"
rbx_cookie = { version = "0.1.5", default-features = false }
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "gzip"] }
roblox-studio-utils = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
