[package]
name = "drillbit"
version = "0.1.3"
edition = "2024"
description = " A plugin installation tool for Roblox"
license = "MIT"
authors = ["Jack T <jack@jackt.space>"]
repository = "https://github.com/jacktabscode/drillbit"
homepage = "https://github.com/jacktabscode/drillbit"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
blake3 = "1.8.2"
env_logger = "0.11.8"
fs-err = { version = "3.1.1", features = ["tokio"] }
log = "0.4.27"
rbx_cookie = { version = "0.1.5", default-features = false }
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "gzip"] }
roblox-studio-utils = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.9.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
